--- a/index.html
+++ b/index.html
@@ -90,12 +90,9 @@
     <div class="sub-menu-1">
     </div>
     </li>
-    
-<footer>
-    <div class="copyright">
-    <p>2023 Unihaus Western Cuisine&copy;  All rights reserved.</p>
-    </div>
-  </footer>
+     <footer id="footer">
+      <h1>2023 Unihaus Western Cuisine &copy; all rights reserved</h1>
+    </footer>
              </ul>
         </div>
     </body>
