--- a/index.html
+++ b/index.html
@@ -90,10 +90,13 @@
     <div class="sub-menu-1">
     </div>
     </li>
+	<footer>
+    <div class="copyright">
+    <p>2023 Unihaus Western Cuisine&copy;  All rights reserved.</p>
+    </div>
+  </footer>
              </ul>
         </div>
-	      <footer id="footer">
-      <h1>2023 Unihaus Western Cuisine &copy; all rights reserved</h1>
     </footer>
     </body>
 </html>
