--- a/index.html
+++ b/index.html
@@ -90,13 +90,10 @@
     <div class="sub-menu-1">
     </div>
     </li>
-	<footer>
-    <div class="copyright">
-    <p>2023 Unihaus Western Cuisine&copy;  All rights reserved.</p>
-    </div>
-  </footer>
-             </ul>
+               </ul>
         </div>
-    </footer>
+<footer id="footer">
+      <h2>2023 Unihaus Western Cuisine &copy; all rights reserved</h2>
+  </footer>
     </body>
 </html>
